--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.mla</groupId>
-    <artifactId>RESTfulWebService</artifactId>
+    <artifactId>RESTfulWS-SpringBoot-Angular</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
